dockerfile change project names

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -7,19 +7,19 @@ EXPOSE 80
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /
 COPY ["nuget.config", "."]
-COPY ["Utg.AuditService.API/Utg.AuditService.API.csproj", "Utg.AuditService.API/"]
-COPY ["Utg.AuditService.BL/Utg.AuditService.BL.csproj", "Utg.AuditService.BL/"]
-COPY ["Utg.AuditService.Common/Utg.AuditService.Common.csproj", "Utg.AuditService.Common/"]
-COPY ["Utg.AuditService.Dal/Utg.AuditService.Dal.csproj", "Utg.AuditService.Dal/"]
-RUN dotnet restore "Utg.AuditService.API/Utg.AuditService.API.csproj"
+COPY ["Utg.LegalService.API/Utg.LegalService.API.csproj", "Utg.LegalService.API/"]
+COPY ["Utg.LegalService.BL/Utg.LegalService.BL.csproj", "Utg.LegalService.BL/"]
+COPY ["Utg.LegalService.Common/Utg.LegalService.Common.csproj", "Utg.LegalService.Common/"]
+COPY ["Utg.LegalService.Dal/Utg.LegalService.Dal.csproj", "Utg.LegalService.Dal/"]
+RUN dotnet restore "Utg.LegalService.API/Utg.LegalService.API.csproj"
 COPY . .
-WORKDIR "/Utg.AuditService.API"
-RUN dotnet build "Utg.AuditService.API.csproj" -c Release -o /app/build
+WORKDIR "/Utg.LegalService.API"
+RUN dotnet build "Utg.LegalService.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Utg.AuditService.API.csproj" -c Release -o /app/publish
+RUN dotnet publish "Utg.LegalService.API.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Utg.AuditService.API.dll"]
+ENTRYPOINT ["dotnet", "Utg.LegalService.API.dll"]
