--- a/src/Utg.LegalService.Dal/Utg.LegalService.Dal.csproj
+++ b/src/Utg.LegalService.Dal/Utg.LegalService.Dal.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Utg.LegalService.Dal</RootNamespace>
+    <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
 
   <ItemGroup>
@@ -29,7 +30,6 @@
 
   <ItemGroup>
     <Folder Include="Migrations" />
-    <Folder Include="Repositories" />
   </ItemGroup>
 
 </Project>
