change minio settings

--- a/src/Utg.LegalService.API/appsettings.json
+++ b/src/Utg.LegalService.API/appsettings.json
@@ -35,5 +35,16 @@
     "Authority": "https://sso.dev.utg.group/auth/realms/utg-group/",
     "Issuer": "https://sso.dev.utg.group/auth/realms/utg-group", //"intranet.utg.group
     "Audience": "intranet-backend"
+  },
+  "Minio": {
+    "Url": "XXX",
+    "AccessKey": "XXX",
+    "MailAccessKey": "XXX",
+    "SecretKey": "XXX",
+    "MailSecretKey": "XXX",
+    "Region": "XXX",
+    "UseSsl": false,
+    "Bucket": "XXX",
+    "MailBucket": "XXX"
   }
 }
