--- a/cicd/docker-stack.develop.yml
+++ b/cicd/docker-stack.develop.yml
@@ -38,6 +38,15 @@ services:
       Queue__IgnoreErrors: "true"
       KeyCloak__Authority: "$KEY_AUTH"
       KeyCloak__Issuer:  "$KEY_ISSUER"
+      Minio__Url: "minio03.utg.group"
+      Minio__Region: "ru-center-rack1"
+      Minio__UseSsl: "true"
+      Minio__AccessKey: "intranet-doc-service"
+      Minio__SecretKey: "8AUGiJN6hh7JXjggME"
+      Minio__Bucket: "intranet-doc"  
+      Minio__MailAccessKey: "intranet-mail-service"
+      Minio__MailSecretKey: "weuXilrAxwtu"
+      Minio__MailBucket: "intranet-mail"
      
     #### Logiging ####
     logging:
