--- a/src/Utg.LegalService.BL/Utg.LegalService.BL.csproj
+++ b/src/Utg.LegalService.BL/Utg.LegalService.BL.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Utg.LegalService.Common\Utg.LegalService.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\ReportTemplates" />
+  </ItemGroup>
+
 </Project>
