--- a/src/Utg.LegalService.API/appsettings.json
+++ b/src/Utg.LegalService.API/appsettings.json
@@ -37,14 +37,14 @@
     "Audience": "intranet-backend"
   },
   "Minio": {
-    "Url": "XXX",
-    "AccessKey": "XXX",
-    "MailAccessKey": "XXX",
-    "SecretKey": "XXX",
+    "Url": "$S3_HOST",
+    "AccessKey": "$S3_ACCESS_KEY",
+    "SecretKey": "$S3_SECRET_KEY",
+    "Region": "$S3_REGION",
+    "UseSsl": true,
+    "Bucket": "$S3_BUCKET",
+    "MailBucket": "intranet-mail",
     "MailSecretKey": "XXX",
-    "Region": "XXX",
-    "UseSsl": false,
-    "Bucket": "XXX",
-    "MailBucket": "XXX"
+    "MailAccessKey": "XXX"
   }
 }
