--- a/src/Utg.LegalService.API/appsettings.json
+++ b/src/Utg.LegalService.API/appsettings.json
@@ -22,8 +22,8 @@
   "AllowedHosts": "*",
   "Jwt": {
     "Key": "here is secret_key for utg api to generate jwt token",
-    "Issuer": "http://localhost", //"intranet.utg.group
-    "Audience": "http://localhost", //"intranet.utg.group
+    "Issuer": "http://localhost",
+    "Audience": "http://localhost",
     "CookieName": "UTGJWTLC",
     "TokenLifetime": "01:00:00"
   },
@@ -33,7 +33,7 @@
   },
   "KeyCloak": {
     "Authority": "https://sso.dev.utg.group/auth/realms/utg-group/",
-    "Issuer": "https://sso.dev.utg.group/auth/realms/utg-group", //"intranet.utg.group
+    "Issuer": "https://sso.dev.utg.group/auth/realms/utg-group",
     "Audience": "intranet-backend"
   },
   "Minio": {
