--- a/cicd/docker-stack.test.yml
+++ b/cicd/docker-stack.test.yml
@@ -40,6 +40,12 @@ services:
       Minio__MailAccessKey: "intranet-mail-service"
       Minio__MailSecretKey: "weuXilrAxwtu"
       Minio__MailBucket: "intranet-mail"
+      Minio__Url: "$S3_HOST"
+      Minio__AccessKey: "$S3_ACCESS_KEY"
+      Minio__SecretKey: "$S3_SECRET_KEY"
+      Minio__Region: "$S3_REGION"
+      Minio__UseSsl: true
+      Minio__Bucket: "$S3_BUCKET"
 
      
     #### Logiging ####
