--- a/cicd/docker-stack.master.yml
+++ b/cicd/docker-stack.master.yml
@@ -38,6 +38,12 @@ services:
       Minio__MailAccessKey: "intranet-mail-connector"
       Minio__MailSecretKey: "m4yStKM4o4Bp"
       Minio__MailBucket: "intranet-mail-storage"
+      Minio__Url: "$S3_HOST"
+      Minio__AccessKey: "$S3_ACCESS_KEY"
+      Minio__SecretKey: "$S3_SECRET_KEY"
+      Minio__Region: "$S3_REGION"
+      Minio__UseSsl: true
+      Minio__Bucket: "$S3_BUCKET"
 
     #### Logiging ####
     logging:
