--- a/cicd/docker-stack.master.yml
+++ b/cicd/docker-stack.master.yml
@@ -42,7 +42,7 @@ services:
       Minio__AccessKey: "$S3_ACCESS_KEY"
       Minio__SecretKey: "$S3_SECRET_KEY"
       Minio__Region: "$S3_REGION"
-      Minio__UseSsl: true
+      Minio__UseSsl: "true"
       Minio__Bucket: "$S3_BUCKET"
 
     #### Logiging ####
