--- a/src/Utg.LegalService.BL/Utg.LegalService.BL.csproj
+++ b/src/Utg.LegalService.BL/Utg.LegalService.BL.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Utg.LegalService.BL</RootNamespace>
+    <LangVersion>10.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
