--- a/src/Utg.LegalService.Dal/Utg.LegalService.Dal.csproj
+++ b/src/Utg.LegalService.Dal/Utg.LegalService.Dal.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Utg.LegalService.Dal</RootNamespace>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
+    <LangVersion>10.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
