--- a/src/Utg.LegalService.BL/Utg.LegalService.BL.csproj
+++ b/src/Utg.LegalService.BL/Utg.LegalService.BL.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Utg.Common.Packages.FileStorage" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
