UTG-2063_add_push_queue_name

--- a/src/Utg.LegalService.API/appsettings.json
+++ b/src/Utg.LegalService.API/appsettings.json
@@ -16,7 +16,9 @@
   "Queue": {
     "Host": "amqp://localhost:5672/",
     "Login": "guest",
-    "Password": "guest"
+    "Password": "guest",
+    "PushExchangeName": "intranet.push-service",
+    "PushQueueName": "intranet_push-service"
   },
   "Jobs": {},
   "AllowedHosts": "*",
