--- a/src/Utg.LegalService.Common/Utg.LegalService.Common.csproj
+++ b/src/Utg.LegalService.Common/Utg.LegalService.Common.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="AutoMapper" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Utg.Common.Packages.Domain" Version="1.0.5" />
+    <PackageReference Include="Utg.Common.Packages.Domain" Version="1.1.15-2208-Nikita-1" />
     <PackageReference Include="Utg.Common.Packages.ExcelReportBuilder" Version="1.0.1" />
     <PackageReference Include="Utg.Common.Packages.Queue" Version="1.0.4" />
     <PackageReference Include="Utg.Common.Packages.ServiceClientProxy" Version="1.0.3" />
