--- a/src/Utg.LegalService.API/appsettings.json
+++ b/src/Utg.LegalService.API/appsettings.json
@@ -39,14 +39,12 @@
     "Audience": "intranet-backend"
   },
   "Minio": {
-    "Url": "$S3_HOST",
-    "AccessKey": "$S3_ACCESS_KEY",
-    "SecretKey": "$S3_SECRET_KEY",
-    "Region": "$S3_REGION",
-    "UseSsl": true,
-    "Bucket": "$S3_BUCKET",
-    "MailBucket": "intranet-mail",
-    "MailSecretKey": "XXX",
-    "MailAccessKey": "XXX"
+    "Url": "localhost:9000",
+    "AccessKey": "myAccessKey",
+    "SecretKey": "myAccessPassword",
+    "Region": "ru-center-rack1",
+    "DisableSaving": false,
+    "UseSsl": false,
+    "Bucket": "legal-bucket"
   }
 }
