UTG-2210_pushes_for_tasks_that_expire_soon

--- a/src/Utg.LegalService.API/Utg.LegalService.API.csproj
+++ b/src/Utg.LegalService.API/Utg.LegalService.API.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Utg.LegalService.BL\Utg.LegalService.BL.csproj" />
     <ProjectReference Include="..\Utg.LegalService.Dal\Utg.LegalService.Dal.csproj" />
+    <ProjectReference Include="..\Utg.LegalService.Jobs\Utg.LegalService.Jobs.csproj" />
   </ItemGroup>
 
   <ItemGroup>
