--- a/src/Utg.LegalService.Jobs/Utg.LegalService.Jobs.csproj
+++ b/src/Utg.LegalService.Jobs/Utg.LegalService.Jobs.csproj
@@ -5,21 +5,16 @@
         <RootNamespace>Utg.LegalService.Jobs</RootNamespace>
         <LangVersion>10</LangVersion>
     </PropertyGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
-      <PackageReference Include="Utg.Common.Packages" Version="0.1.79" />
-    </ItemGroup>
     
 
     <ItemGroup>
+      <ProjectReference Include="..\Utg.LegalService.BL\Utg.LegalService.BL.csproj" />
       <ProjectReference Include="..\Utg.LegalService.Common\Utg.LegalService.Common.csproj" />
     </ItemGroup>
     
 
     <ItemGroup>
-      <Folder Include="RemoveOldLogs" />
+      <PackageReference Include="MediatR" Version="11.1.0" />
     </ItemGroup>
 
 </Project>
