add job schedule

--- a/src/Utg.LegalService.API/appsettings.json
+++ b/src/Utg.LegalService.API/appsettings.json
@@ -20,7 +20,11 @@
     "PushExchangeName": "intranet.push-service",
     "PushQueueName": "intranet_push-service"
   },
-  "Jobs": {},
+  "Jobs": {
+    "CheckListJob": {
+      "NotifyExpiredSoonTasksJob": "0 30 5 * * *"
+    }
+  },
   "AllowedHosts": "*",
   "Jwt": {
     "Key": "here is secret_key for utg api to generate jwt token",
