--- a/src/Utg.LegalService.API/appsettings.json
+++ b/src/Utg.LegalService.API/appsettings.json
@@ -21,8 +21,8 @@
     "PushQueueName": "intranet_push-service"
   },
   "Jobs": {
-    "CheckListJob": {
-      "NotifyExpiredSoonTasksJob": "0 30 5 * * *"
+    "NotifyExpiredSoonTasksJob": {
+      "Timetable": "0 30 5 * * *"
     }
   },
   "AllowedHosts": "*",
