--- a/src/Utg.LegalService.API/appsettings.json
+++ b/src/Utg.LegalService.API/appsettings.json
@@ -17,6 +17,16 @@
     "Host": "amqp://localhost:5672/",
     "Login": "guest",
     "Password": "guest",
+    "QuitQueueName": "intranet_userprofile-quit_legal",
+    "QuitExchangeName": "intranet.userprofile-quit",
+    "HireQueueName": "intranet_userprofile_hire_legal",
+    "HireExchangeName": "intranet.userprofile_hire", 
+    "CompanyUpdateExchangeName": "intranet.company_update",
+    "CompanyUpdateQueueName": "intranet.company_update_legal",
+    "DepartmentUpdateExchangeName": "intranet.department_update",
+    "DepartmentUpdateQueueName": "intranet.department_update_legal",
+    "PositionUpdateExchangeName": "intranet.position_update",
+    "PositionUpdateQueueName": "intranet.position_update_legal",
     "PushExchangeName": "intranet.push-service",
     "PushQueueName": "intranet_push-service"
   },
@@ -39,14 +49,12 @@
     "Audience": "intranet-backend"
   },
   "Minio": {
-    "Url": "$S3_HOST",
-    "AccessKey": "$S3_ACCESS_KEY",
-    "SecretKey": "$S3_SECRET_KEY",
-    "Region": "$S3_REGION",
-    "UseSsl": true,
-    "Bucket": "$S3_BUCKET",
-    "MailBucket": "intranet-mail",
-    "MailSecretKey": "XXX",
-    "MailAccessKey": "XXX"
+    "Url": "localhost:9000",
+    "AccessKey": "myAccessKey",
+    "SecretKey": "myAccessPassword",
+    "Region": "ru-center-rack1",
+    "DisableSaving": false,
+    "UseSsl": false,
+    "Bucket": "legal-bucket"
   }
 }
