--- a/src/Utg.LegalService.Dal/Utg.LegalService.Dal.csproj
+++ b/src/Utg.LegalService.Dal/Utg.LegalService.Dal.csproj
@@ -23,6 +23,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Utg.Common.EF" Version="0.2.4" />
   </ItemGroup>
 
   <ItemGroup>
