--- a/src/Utg.LegalService.Jobs/Utg.LegalService.Jobs.csproj
+++ b/src/Utg.LegalService.Jobs/Utg.LegalService.Jobs.csproj
@@ -7,19 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
-      <PackageReference Include="Utg.Common.Packages" Version="0.1.79" />
+      <PackageReference Include="MediatR" Version="11.0.0" />
     </ItemGroup>
     
 
     <ItemGroup>
+      <ProjectReference Include="..\Utg.LegalService.BL\Utg.LegalService.BL.csproj" />
       <ProjectReference Include="..\Utg.LegalService.Common\Utg.LegalService.Common.csproj" />
-    </ItemGroup>
-    
-
-    <ItemGroup>
-      <Folder Include="RemoveOldLogs" />
     </ItemGroup>
 
 </Project>
