--- a/src/Utg.LegalService.Common/Utg.LegalService.Common.csproj
+++ b/src/Utg.LegalService.Common/Utg.LegalService.Common.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -11,14 +11,14 @@
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Utg.Common.Models" Version="0.2.4" />
-    <PackageReference Include="Utg.Common.Packages.Domain" Version="1.1.17" />
-    <PackageReference Include="Utg.Common.EF" Version="0.2.3-UTG-2182-Nikita-1" />
+    <PackageReference Include="Utg.Common.Packages.Domain" Version="1.1.20" />
+    <PackageReference Include="Utg.Common.EF" Version="1.4.6" />
     <PackageReference Include="Utg.Common.Packages.ExcelReportBuilder" Version="1.0.1" />
     <PackageReference Include="Utg.Common.Packages.Queue" Version="1.1.3" />
     <PackageReference Include="Utg.Common.Packages.ServiceClientProxy" Version="1.0.3" />
-    <PackageReference Include="Utg.Common.Packages.FileStorage" Version="0.2.4" />
+    <PackageReference Include="Utg.Common.Packages.FileStorage" Version="1.0.3" />
     <PackageReference Include="Utg.Common.Packages.Queue" Version="1.1.3" />
-    <PackageReference Include="Utg.Common.Packages.ServiceClientProxy" Version="1.0.3" />
+    <PackageReference Include="Utg.Common.Packages.ServiceClientProxy" Version="1.0.4" />
   </ItemGroup>
 
 </Project>
