UTG-2210_pushes_for_tasks_that_expire_soon

--- a/src/Utg.LegalService.API/appsettings.json
+++ b/src/Utg.LegalService.API/appsettings.json
@@ -30,7 +30,11 @@
     "PushExchangeName": "intranet.push-service",
     "PushQueueName": "intranet_push-service"
   },
-  "Jobs": {},
+  "Jobs": {
+    "NotifyExpiredSoonTasksJob": {
+      "Timetable": "0 30 5 * * *"
+    }
+  },
   "AllowedHosts": "*",
   "Jwt": {
     "Key": "here is secret_key for utg api to generate jwt token",
