--- a/src/Utg.LegalService.API/Utg.LegalService.API.csproj
+++ b/src/Utg.LegalService.API/Utg.LegalService.API.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.7" />
     <PackageReference Include="NSwag.AspNetCore" Version="13.17.0" />
+    <PackageReference Include="Utg.Common.Packages.Queue" Version="1.1.3" />
   </ItemGroup>
 
   <ItemGroup>
