UTG-2216_ability_to_download_file_whithout_opening_task

--- a/src/Utg.LegalService.BL/Utg.LegalService.BL.csproj
+++ b/src/Utg.LegalService.BL/Utg.LegalService.BL.csproj
@@ -18,8 +18,9 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.7" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Utg.Common.MediatR" Version="0.1.5" />
-    <PackageReference Include="Utg.Common.Packages.FileStorage" Version="1.0.3" />
+    <PackageReference Include="Utg.Common.MediatR" Version="0.1.4" />
+    <PackageReference Include="Utg.Common.Packages.Domain" Version="1.1.24" />
+    <PackageReference Include="Utg.Common.Packages.FileStorage" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
