--- a/src/Utg.LegalService.Dal/Utg.LegalService.Dal.csproj
+++ b/src/Utg.LegalService.Dal/Utg.LegalService.Dal.csproj
@@ -28,4 +28,13 @@
   <ItemGroup>
     <ProjectReference Include="..\Utg.LegalService.Common\Utg.LegalService.Common.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Migrations\20221122142918_ParentTask.cs" />
+  </ItemGroup>
+
 </Project>
