--- a/src/Utg.LegalService.API/appsettings.json
+++ b/src/Utg.LegalService.API/appsettings.json
@@ -43,6 +43,10 @@
     "CookieName": "UTGJWTLC",
     "TokenLifetime": "01:00:00"
   },
+  "HangfireAuth": {
+    "Login": "HangfireLogin",
+    "Password": "HangfirePassword"
+  },
   "BasicAuth": {
     "Login": "1cexport",
     "Password": "exp0rt"
