--- a/cicd/docker-stack.test-cloud.yml
+++ b/cicd/docker-stack.test-cloud.yml
@@ -19,25 +19,25 @@ services:
         - "traefik.enable=true"
         - "traefik.docker.network=proxy"
         - "traefik.http.routers.intranet-legal.entrypoints=websecure"
-        - "traefik.http.routers.intranet-legal.rule=Host(`intranet.dev.utg.group`) && PathPrefix(`/legal/`)"        
+        - "traefik.http.routers.intranet-legal.rule=Host(`intranet-cloud.test.utg.group`) && PathPrefix(`/legal/`)"        
         - "traefik.http.routers.intranet-legal.service=intranet-legal_app"
-        - "traefik.http.services.intranet-legal_app.loadbalancer.server.port=80"
-        # - "traefik.http.services.intranet-swagger_app.loadbalancer.passhostheader=true"
+        - "traefik.http.services.intranet-legal_app.loadbalancer.server.port=80"        
          
     ports:
       - 30056:80
     stop_grace_period: 1m
     environment:
       TZ: Europe/Moscow
-      ASPNETCORE_ENVIRONMENT: Development
-      ConnectionStrings__UTGDatabase: "Host=$PG_HOST;Port=5432;Database=$UTG_PG_DB;Username=$UTG_PG_USER;Password=$UTG_PG_PASS"      
+      ASPNETCORE_ENVIRONMENT: Prod
+      ConnectionStrings__UTGDatabase: "Host=$PG_HOST;Port=$PG_PORT;Database=$UTG_PG_DB;Username=$UTG_PG_USER;Password=$UTG_PG_PASS"      
       Api__Main: "http://intranet-users_app/api"
       Queue__Host: "amqps://mq_rabbit:5672"
       Queue__Login: "intranet-users"
       Queue__Password: "jn5bLp@tf2J=RbAs"
       Queue__IgnoreErrors: "true"
       KeyCloak__Authority: "$KEY_AUTH"
-      KeyCloak__Issuer:  "$KEY_ISSUER"     
+      KeyCloak__Issuer:  "$KEY_ISSUER"
+      Minio__MailAccessKey: "intranet-mail-service"
       Minio__MailSecretKey: "weuXilrAxwtu"
       Minio__MailBucket: "intranet-mail"
       Minio__Url: "$S3_HOST"
