--- a/cicd/docker-stack.test.yml
+++ b/cicd/docker-stack.test.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   app:
-    image: ${CI_REGISTRY_IMAGE}:${CI_COMMIT_TAG}${CI_COMMIT_SHORT_SHA}
+    image: $YA_REGISTRY/$CI_COMMIT_REF_NAME/$CI_PROJECT_ROOT_NAMESPACE/$CI_PROJECT_NAME:${CI_COMMIT_TAG}${CI_COMMIT_SHORT_SHA}
     hostname: intranet-legal_app  
     networks:
       - utg
