--- a/src/Utg.LegalService.Common/Utg.LegalService.Common.csproj
+++ b/src/Utg.LegalService.Common/Utg.LegalService.Common.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="AutoMapper" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Utg.Api.Common.Models" Version="1.3.1" />
+    <PackageReference Include="Utg.Api.Common.Models" Version="1.3.2-alpha.0.10" />
     <PackageReference Include="Utg.Common.EF" Version="2.0.17" />
     <PackageReference Include="Utg.Common.Extensions" Version="2.0.17" />
     <PackageReference Include="Utg.Common.Models" Version="2.0.17" />
