--- a/src/Utg.LegalService.BL/Utg.LegalService.BL.csproj
+++ b/src/Utg.LegalService.BL/Utg.LegalService.BL.csproj
@@ -16,12 +16,12 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.7" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Utg.Api.Common.Models" Version="1.3.2-alpha.0.10" />
-    <PackageReference Include="Utg.Api.CurrentUserService.Client" Version="1.3.2-alpha.0.10" />
-    <PackageReference Include="Utg.Common.Models" Version="2.0.17" />
-    <PackageReference Include="Utg.Common.MediatR" Version="2.0.17" />
-    <PackageReference Include="Utg.Common.Packages.Domain" Version="2.0.17" />
-    <PackageReference Include="Utg.Common.Packages.FileStorage" Version="2.0.17" />
+    <PackageReference Include="Utg.Api.Common.Models" Version="1.3.2" />
+    <PackageReference Include="Utg.Api.CurrentUserService.Client" Version="1.3.2" />
+    <PackageReference Include="Utg.Common.Models" Version="2.0.19" />
+    <PackageReference Include="Utg.Common.MediatR" Version="2.0.19" />
+    <PackageReference Include="Utg.Common.Packages.Domain" Version="2.0.19" />
+    <PackageReference Include="Utg.Common.Packages.FileStorage" Version="2.0.19" />
   </ItemGroup>
 
   <ItemGroup>
