UTG-2453_fix_logs_new_line

--- a/src/Utg.LegalService.API/appsettings.DockerLocal.json
+++ b/src/Utg.LegalService.API/appsettings.DockerLocal.json
@@ -6,36 +6,69 @@
 			"Microsoft.Hosting.Lifetime": "Information"
 		}
 	},
+	"ConnectionStrings": {
+		"UTGDatabase": "Host=host.docker.internal;Port=5432;Database=intranet_legal;Username=postgres;Password=Passw0rd"
+	},
+	"Api": {
+		"Main": "http://host.docker.internal/api",
+		"Task": "http://host.docker.internal/task"
+	},
 	"Queue": {
-		"Host": "amqps://b-05b9260a-189e-40ca-a04c-5276eb0fbfec.mq.eu-west-3.amazonaws.com:5671",
-		"Login": "xxxt",
-		"Password": "xxx",
-		"MailQueueName": "email_notification",
-		"MailExchangeName": "utg",
-		"TaskExchangeName": "intranet.task-service",
-		"TaskQueueName": "intranet_task-service",
-		"IgnoreErrors": false,
+		"Host": "amqp://host.docker.internal:5672/",
+		"Login": "guest",
+		"Password": "guest",
+		"QuitQueueName": "intranet_userprofile-quit_legal",
+		"QuitExchangeName": "intranet.userprofile-quit",
+		"HireQueueName": "intranet_userprofile_hire_legal",
+		"HireExchangeName": "intranet.userprofile_hire",
+		"UserProfileUpdateExchangeName": "intranet.userprofile_update",
+		"UserProfileUpdateQueueName": "intranet.userprofile_update_legal",
+		"CompanyUpdateExchangeName": "intranet.company_update",
+		"CompanyUpdateQueueName": "intranet.company_update_legal",
+		"DepartmentUpdateExchangeName": "intranet.department_update",
+		"DepartmentUpdateQueueName": "intranet.department_update_legal",
+		"PositionUpdateExchangeName": "intranet.position_update",
+		"PositionUpdateQueueName": "intranet.position_update_legal",
 		"PushExchangeName": "intranet.push-service",
-		"PushQueueName": "intranet_push-service",
-		"TestEmail": "li-sam@mail.ru",
-		"QuitQueueName": "quit_queue",
-		"QuitExchangeName": "quit_exchange"
+		"PushQueueName": "intranet_push-service"
+	},
+	"Jobs": {
+		"NotifyExpiredSoonTasksJob": {
+			"Timetable": "0 30 5 * * *"
+		}
 	},
 	"AllowedHosts": "*",
-	"ConnectionStrings": {
-		"UTGDatabase": "Host=host.docker.internal;Port=5432;Database=intranet_task;Username=postgres;Password=Passw0rd"
-
-	},
 	"Jwt": {
 		"Key": "here is secret_key for utg api to generate jwt token",
-		"Issuer": "http://host.docker.internal", //"intranet.utg.group
-		"Audience": "http://host.docker.internal", //"intranet.utg.group
+		"Issuer": "http://host.docker.internal",
+		"Audience": "http://host.docker.internal",
 		"CookieName": "UTGJWTLC",
 		"TokenLifetime": "01:00:00"
 	},
-	"Vapid": {
-		"PublicKey": "BO2ViHvb1J7fQYT-EbN3rzrlsyHy_Sl-vE5jdOss4F7zYWIqYMmPiErtpBh6E16SAwRvnZ1ggEWKd99GjVuN5_E",
-		"PrivateKey": "ghH5J6FGef38SAggRhiCggi-VVzc3RPIKNSqizsTUy8",
-		"Subject": "mailto:anna.d.rysina@gmail.com"
+	"HangfireAuth": {
+		"Login": "HangfireLogin",
+		"Password": "HangfirePassword"
+	},
+	"BasicAuth": {
+		"Login": "1cexport",
+		"Password": "exp0rt"
+	},
+	"KeyCloak": {
+		"Authority": "https://sso.dev.utg.group/auth/realms/utg-group/",
+		"Issuer": "https://sso.dev.utg.group/auth/realms/utg-group",
+		"Audience": "intranet-backend"
+	},
+	"Minio": {
+		"Url": "host.docker.internal:9000",
+		"AccessKey": "myAccessKey",
+		"SecretKey": "myAccessPassword",
+		"Region": "ru-center-rack1",
+		"DisableSaving": false,
+		"UseSsl": false,
+		"Bucket": "legal-bucket"
+	},
+	"grpc": {
+		//"main": "http://0.0.0.0:8090"
+		"main": "http://host.docker.internal:5202"
 	}
 }
