--- a/src/Utg.LegalService.API/appsettings.json
+++ b/src/Utg.LegalService.API/appsettings.json
@@ -6,6 +6,36 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Grafana.Loki"
+    ],
+    "MinimumLevel": {
+      "Default": "Debug"
+    },
+    "Enrich": [
+      "FromLogContext"
+    ],
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "GrafanaLoki",
+        "Args": {
+          "uri": "http://loki_app:3100",
+          "outputTemplate": "{Timestamp:dd-MM-yyyy HH:mm:ss} [{Level:u3}] {Message}{NewLine}{Exception}",
+          "labels": [
+            {
+              "key": "container_name",
+              "value": "intranet-legal"
+            }
+          ],
+          "createLevelLabel": true
+        }
+      }
+    ]
+  },
   "ConnectionStrings": {
     "UTGDatabase": "Host=localhost;Port=5432;Database=intranet_legal;Username=postgres;Password=Passw0rd"
   },
