--- a/src/Utg.LegalService.API/Utg.LegalService.API.csproj
+++ b/src/Utg.LegalService.API/Utg.LegalService.API.csproj
@@ -28,6 +28,9 @@
     <PackageReference Include="Utg.Common.Models" Version="2.0.19" />
     <PackageReference Include="Utg.Common.Models.Mvc.Core.Response" Version="2.0.19" />
     <PackageReference Include="Utg.Common.Packages.Queue" Version="2.0.19" />
+    <PackageReference Include="Serilog" Version="2.11.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
+    <PackageReference Include="Serilog.Sinks.Grafana.Loki" Version="7.1.1" />
   </ItemGroup>
 
   <ItemGroup>
