--- a/src/Utg.LegalService.API/appsettings.json
+++ b/src/Utg.LegalService.API/appsettings.json
@@ -23,7 +23,7 @@
       {
         "Name": "GrafanaLoki",
         "Args": {
-          "uri": "http://loki_app:3100",
+          "uri": "http://127.0.0.1:3100",
           "outputTemplate": "{Timestamp:dd-MM-yyyy HH:mm:ss} [{Level:u3}] {Message}{NewLine}{Exception}",
           "labels": [
             {
