--- a/src/Utg.LegalService.API/appsettings.json
+++ b/src/Utg.LegalService.API/appsettings.json
@@ -2,8 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "Serilog": {
@@ -23,7 +22,7 @@
       {
         "Name": "GrafanaLoki",
         "Args": {
-          "uri": "http://127.0.0.1:3100",
+          "uri": "http://loki_app:3100",
           "outputTemplate": "{Timestamp:dd-MM-yyyy HH:mm:ss} [{Level:u3}] {Message}{NewLine}{Exception}",
           "labels": [
             {
